# aoc2021

./: Cargo.toml
src/: main.rs  main01a.rs  main01b.rs  main02a.rs  main02b.rs  main03a.rs  main03b.rs  main04a.rs  main04b.rs  main05a.rs  main05b.rs  main06a.rs  main06b.rs  main07a.rs  main07b.rs  main08a.rs  main08b.py  main08b.rs  main09a.rs  main09b.rs  main10a.rs  main10b.rs  main11a.rs  main11b.rs  main12a.rs  main12b.rs  main13a.rs  main13b.rs  main14a.rs  main14b.rs  main15a.rs  main15b.rs  main16a.rs  main16b.rs  main17a.rs  main17b.rs  main18a.rs  main18b.rs  main19a.rs  main19b.rs  (+8 more)
