[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
maplit = "*"

[[bin]]
name = "main01a"
path = "src/main01a.rs"

[[bin]]
name = "main01b"
path = "src/main01b.rs"

[[bin]]
name = "main02a"
path = "src/main02a.rs"

[[bin]]
name = "main02b"
path = "src/main02b.rs"

[[bin]]
name = "main03a"
path = "src/main03a.rs"

[[bin]]
name = "main03b"
path = "src/main03b.rs"

[[bin]]
name = "main04a"
path = "src/main04a.rs"

[[bin]]
name = "main04b"
path = "src/main04b.rs"

[[bin]]
name = "main05a"
path = "src/main05a.rs"

[[bin]]
name = "main05b"
path = "src/main05b.rs"

[[bin]]
name = "main06a"
path = "src/main06a.rs"

[[bin]]
name = "main06b"
path = "src/main06b.rs"

[[bin]]
name = "main07a"
path = "src/main07a.rs"

[[bin]]
name = "main07b"
path = "src/main07b.rs"

[[bin]]
name = "main08a"
path = "src/main08a.rs"

[[bin]]
name = "main08b"
path = "src/main08b.rs"

[[bin]]
name = "main09a"
path = "src/main09a.rs"

[[bin]]
name = "main09b"
path = "src/main09b.rs"

[[bin]]
name = "main10a"
path = "src/main10a.rs"

[[bin]]
name = "main10b"
path = "src/main10b.rs"

[[bin]]
name = "main11a"
path = "src/main11a.rs"

[[bin]]
name = "main11b"
path = "src/main11b.rs"

[[bin]]
name = "main12a"
path = "src/main12a.rs"

[[bin]]
name = "main12b"
path = "src/main12b.rs"

[[bin]]
name = "main13a"
path = "src/main13a.rs"

[[bin]]
name = "main13b"
path = "src/main13b.rs"
